# ros2_dog_ws

./: README.md  sc.bash
src/dog_brain/: CMakeLists.txt  package.xml
src/dog_brain/src/: trot.cpp
src/dog_bringup/: CMakeLists.txt  package.xml
src/dog_bringup/config/: controllers.yaml  dog_controllers.yaml
src/dog_bringup/launch/: full_system.launch.py  gazebo.launch.py  spawn_dog.launch.py  spawn_dog_with_controllers.launch.py
src/dog_bringup/scripts/: move_dog.py  stand.py
src/dog_bringup/worlds/: dog.world  empty.world
src/dog_controllers/: CMakeLists.txt  dog_controllers_plugins.xml  package.xml
src/dog_controllers/config/: controllers.yaml  dog_leg_controller.yaml
src/dog_controllers/include/dog_controllers/: dog_leg_controller.hpp  foot_trajectory.hpp  gait_generator.hpp  leg_kinematics.hpp
src/dog_controllers/launch/: dog_controllers.launch.py
src/dog_controllers/src/: dog_leg_controller.cpp  leg_kinematics.cpp  plugin_registration.cpp
src/dog_description/: CMakeLists.txt  package.xml
src/dog_description/config/: dog_controllers.yaml
src/dog_description/launch/: gazebo.launch.py  view_dog.launch.py
src/dog_description/urdf/: dog.urdf  dog.urdf.xacro
src/dog_hardware/: CMakeLists.txt  package.xml
src/dog_teleop/: CMakeLists.txt  package.xml
src/my_dog_node/: package.xml  setup.cfg  setup.py
src/my_dog_node/my_dog_node/: stand_up.py  trot.py
src/my_dog_node/scripts/: leg_move.py
