<package format="3">
  <name>dog_controllers</name>
  <version>0.0.1</version>
  <description>Control configuration for dog robot</description>
  <maintainer email="matvey@example.com">Matvey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
