<package format="3">
  <name>dog_description</name>
  <version>0.0.0</version>
  <description>Dog description package</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
