<package format="3">
  <name>my_dog_node</name>
  <version>0.0.0</version>
  <description>Control logic</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>ros2 launch dog_bringup gazebo.launch.py
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> <!-- Пригодится позже -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>